# amazon-emr-cli

./: .gitignore  Dockerfile  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yaml  unit-tests.yaml
src/emr_cli/: config.py  emr_cli.py
src/emr_cli/base/: EmrBase.py
src/emr_cli/deployments/: __init__.py  emr_ec2.py  emr_eks.py  emr_local_dev.py  emr_serverless.py
src/emr_cli/packaging/: detector.py  python_files_project.py  python_poetry_project.py  python_project.py  simple_project.py
src/emr_cli/templates/poetry/: README.md  pyproject.toml
src/emr_cli/templates/pyspark/: Dockerfile  entrypoint.py  pyproject.toml
src/emr_cli/templates/pyspark/jobs/: extreme_weather.py
src/emr_cli/utils/: __init__.py
tests/: test_cli.py  test_detector.py  test_init.py
tests/deployments/: test_emr_ec2.py
tests/packaging/: test_python_files_project.py  test_python_poetry_project.py
