[tool.poetry]
name = "emr-cli"
version = "0.0.16"
description = "A command-line interface for packaging, deploying, and running your PySpark jobs on EMR."
authors = ["Amazon EMR <emr-developer-advocates@amazon.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
boto3 = "^1.26.6"
pyyaml = "5.3.1"
rich = "^13.4.2"
importlib-metadata = {version = "6.7.0", python = "3.7"}

[tool.poetry.group.dev.dependencies]
pytest = "7.2.2"
pytest-cov = "^4.0.0"
pyfakefs = "5.1.0"
boto3-stubs = {extras = ["s3"], version = "^1.28.70"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
emr = "emr_cli.emr_cli:cli"
